--- a/client/src/app/samples-listing/samples-listing.component.scss
+++ b/client/src/app/samples-listing/samples-listing.component.scss
@@ -9,6 +9,10 @@
    font-size: small;
 }
 
+.expand-collapse-samples-btn {
+   min-width: 145px;
+}
+
 .last-loaded {
    margin-left: 5px;
    font-size: small;
